# astrea

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  conanfile.py  flake.nix  justfile  pyproject.toml  remotes.json  setup.py
cmake/: astreaConfig.cmake.in
examples/: 0.2-spectra.ipynb  1.1-rbb_balance_tasitsiomi.ipynb  1.2-rbb_balance_mashonkina.ipynb  2.1-rbf_balance_tasitsiomi_badnell.ipynb  2.2-rbf_balance_mashonkina.ipynb  3.1-cbb_balance_regemorter.ipynb  3.2-cbb_balance_mashonkina.ipynb  4.1-cbf_balance_hahn.ipynb  5.1-ct_balance_arnaud.ipynb  6.1-cbb_thermalization.ipynb  6.2-cbb_ri_thermalization.ipynb
include/astrea/: astrea.h
include/astrea/calculation/: lte.h  nlte.h
include/astrea/cooling/: cooling_rate.h  cooling_rate_approximation.h  (+1 more)
include/fm/: prod.h  sum.h
include/lss/: lss.h
lss/: __init__.py
lss_py/: CMakeLists.txt  setup.py
lss_py/lss/: __init__.py  calculate_populations_lte.py  calculate_populations_nlte.py  calculate_rates_matrix.py  calculation.py  plot.py  plot_spectrum.py
lss_py/src/: lss_py.cxx
src/: CMakeLists.txt  meson.build
src/src/: lss_py.cxx  nlte_py.cxx
tests/: 0.2-spectra.ipynb  1.0-full.ipynb  1.1-re_balance_inasan.ipynb  1.1-re_balance_tasitsiomi.ipynb  1.1-temperature.ipynb  1.2-electron_number_density.ipynb  1.2-re_balance_inasan.ipynb  1.2-re_balance_tasitsiomi.ipynb  2.0-ri_analytics.ipynb  2.1-ri_balance_inasan.ipynb  2.1-ri_balance_tasitsiomi_badnell.ipynb  2.2-ri_balance_inasan.ipynb  2.2-ri_balance_tasitsiomi_badnell.ipynb  3.0-ce_analytics.ipynb  3.1-ce_balance_inasan.ipynb  3.1-ce_balance_regemorter.ipynb  3.2-ce_balance_inasan.ipynb  3.2-ce_balance_regemorter.ipynb  4.1-ci_balance_hahn.ipynb  5.0-ct_analytics.ipynb  5.1-ct_balance_arnaud.ipynb  6.1-ce.ipynb  6.2-ce_ri.ipynb  analytics.ipynb  main.py  utils.py
(+548 files in other folders)
