[tool.poetry]
name = "nlte"
version = "0.1.0"
description = ""
authors = ["deverte <deverte@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
numpy = "^1.24.2"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
